--- a/calculator.html
+++ b/calculator.html
@@ -20,6 +20,10 @@
         var num = document.getElementById("n1");
         num.value = Math.pow(num.value, 2);
       }
+      function inverso() {
+        var num = document.getElementById("n1");
+        num.value = 1 / num.value;
+      }
     </script>
   </head>
   <body>
@@ -31,6 +35,7 @@
       <button onclick="sin()">sin(x)</button>
       <button onclick="cuarta()">x^4</button>
       <button onclick="cuadrado()">x^2</button>
+      <button onclick="inverso()">1/x</button>
     </p>
   </body>
 </html>
